# agent_news

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bot_handler.py  bot_info_prompt_card.py  compare_filters.py  compare_sent_v2.py  crontab.bak-20260525-v2-filter  crontab.v2-filter  db.py  db.py.bak-20260525-feedback  db.py.bak-20260525-filter-v2  db.py.bak-20260525-run-id  db.py.bak-20260525-thread-id  holdings_loader.py  insights.py  knowledge_file_reader.py  llm_filter.py  llm_filter.py.bak-20260524-openclaw  llm_filter_v2.py  llm_filter_v2.py.bak-20260525-run-id  main.py  main.py.bak-20260525-filter-v2  main.py.bak-20260525-run-id  openclaw-feedback-plugin  parser.py  parser.py.bak-20260525-sources-txt  pyproject.toml  remove_admin_menu.py  run_digest_cron.sh  samara_sources.py  send_general_menu.py  sender.py  sender.py.bak-20260524-html  sender.py.bak-20260525-run-id  sender.py.bak-20260525-thread-id  setup_regional_gosbs.py  sources_loader.py  test_holdings_loader.py  (+3 more)
agents/: README.md
changelogs/: 2026-05-27-structure-like-openclaw-dispatcher.md  happy-meitner-Zxk0X.md
config/: agents.json  holdings.txt  qr_sources_2026-05-29.json  region_context.md  sources.txt
data/: news_bot.before_knowledge_dedup_20260526_184545.db  news_bot.db
deploy/: openclaw.agents.example.jsonc
docs/: reflection-agent-roadmap.md
handoff/: README.md
openclaw-feedback-plugin/: feedback-store.js  index.js  openclaw.plugin.json  plugin-core.js  test.mjs
plugins/: README.md
scripts/: README.md  _bootstrap.py  compare_filters.py  compare_sent_v2.py  remove_admin_menu.py  (+4 more)
(+143 files in other folders)
